--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h1 class="first-h1">What is the Matrix?</h1>
-        <img src = "imagens/morpheus.jpg"> 
-        <img src = "imagens/neo.jpg"> 
-        <img src = "imagens/smith.jpg"> 
-        <img src = "imagens/trinity.jpg">
+        <img src = "morpheus.jpg"> 
+        <img src = "neo.jpg"> 
+        <img src = "smith.jpg"> 
+        <img src = "trinity.jpg">
     <p class="first-p"> Matrix tem como tema a luta do ser humano, por volta do ano de 2200, para se
         livrar do domínio das máquinas que evoluíram após o advento da inteligência
         artificial. A humanidade cobriu a luz do sol para cortar o suprimento de energia
@@ -32,10 +32,10 @@
         matrix, controlar o programa e derrotar os mecanismos anti-virus,
         personalizados por agentes vestidos de terno e óculos escuros. Do ponto de
         vista do programa, os humanos livres são os vírus do planeta terra.</p>
-        <img src = "imagens/morpheus.jpg"> 
-        <img src = "imagens/neo.jpg"> 
-        <img src = "imagens/smith.jpg"> 
-        <img src = "imagens/trinity.jpg">
+        <img src = "morpheus.jpg"> 
+        <img src = "neo.jpg"> 
+        <img src = "smith.jpg"> 
+        <img src = "trinity.jpg">
     <h1 class="second-h1">What is the Matrix?</h1>
 </body>
 </html>
